--- a/public/stat120/Day16.Rmd
+++ b/public/stat120/Day16.Rmd
@@ -615,7 +615,7 @@ class: middle
 
 class: inverse
 
-# What if we wanted a 90% CI? What z-score should we use to get the margin of error?
+# What if we wanted a 90% CI? What z-score should we use?
 
 --
 
@@ -667,15 +667,16 @@ class: action
 ![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
 ]
 .pull-right-60[
+
 <br>
-.bq[
-
-Let's go over to the class activity .Rmd file and complete the tasks for today.
+.bql[
+- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Please do the class activity and let me know if you have any questions
+- Feel free to talk to your neighbor
+]
 
 
 ]
 
-]
-
-`r countdown(minutes = 10, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+`r countdown(minutes = 15, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
 
